# SKILL

./: README.md  SKILL.md  analyze.py  feedback_system.py  pyproject.toml
.claude/: settings.local.json
.claude/skills/paper-rewriter/: BESTPRACTICES.md  QUICKSTART.md  README.md  SKILL.md  TROUBLESHOOTING.md
.claude/skills/paper-rewriter-zh/: README.md  SKILL.md
.claude/skills/rewrite/: SKILL.md  analyze.py
aigc_rewriter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
analyzer/: __init__.py  ai_traces.py  paragraphs.py  patterns.py  scorer.py  structure.py  syntax.py  vocabulary.py
docs/superpowers/plans/: 2026-06-20-aigc-rewriter.md
docs/superpowers/specs/: 2026-06-20-aigc-rewriter-design.md  2026-06-23-paper-rewriter-full-upgrade-design.md  (+1 more)
evals/: evals.json
feedback/learning/: strategies.json
feedback/sessions/: 2026-06-23-2f7f3e8e.json  2026-06-23-432d91a9.json  2026-06-23-c020c2f0.json
patterns/: builtin.json  learned.json  user.json
references/: chinese-specific.md  domains.md  edge_cases.md  synonyms.md  techniques.md
rewriter/: __init__.py  context.py  diff.py  verify.py
scripts/: analyze.py  edge_cases.py  feedback_cli.py  feedback_system.py  run_evals.py  run_pipeline.py
tests/: conftest.py  test_ai_traces.py  test_chinese.py  test_feedback.py  test_integration.py  test_learn.py  test_paragraphs.py  test_patterns.py  test_reference.py  test_rewriter.py  test_scorer.py  test_similarity.py  test_structure.py  test_syntax.py  test_vocabulary.py
utils/: io.py  reference_loader.py  similarity.py  text.py
(+147 files in other folders)
